tests/ui/macros/macro-backtrace-println.stderr
error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-backtrace-println.rs:14:30
   |
LL | / macro_rules! myprintln {
LL | |     ($fmt:expr) => (myprint!(concat!($fmt, "\n")));
   | |                              ^^^^^^^^^^^^^^^^^^^ in this macro invocation (#2)
LL | | }
   | |_- in this expansion of `myprintln!` (#1)
...
LL |       myprintln!("{}");
   |       ---------------- in this macro invocation (#1)
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `concat!` (#2)

error: aborting due to previous error

